First polish pass
-Added old website to repo

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,24 +1,25 @@
 <html>
 <header>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AboutMe</title>
     <link rel="stylesheet" href="stylesheet.css">
 </header>
 
 <body>
     <ul class="navigation">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="gamejams.html">Game Jams</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="aboutme.html" style="text-decoration: underline">About Me</a></li>
+        <li><a href="index.html"><b>Home</b></a></li>
+        <li><a href="projects.html"><b>Projects</b></a></li>
+        <li><a href="gamejams.html"><b>Game Jams</b></a></li>
+        <li><a href="blog.html"><b>Blog</b></a></li>
+        <li><a href="aboutme.html" style="text-decoration: underline"><b>About Me</b></a></li>
     </ul>
 
     <row-container>
         <h1>About Me</h1>
     </row-container>
 
-    <div style="justify-content: center;display: flex; margin-bottom: 40px;">
-    <img src="images/me.jpg" alt="Me" width="20%" height="20%" >
+    <div style="justify-content: center;display: flex; margin-bottom: 40px; align-self: center">
+    <img src="images/me.jpg" alt="Me" width="20%" height="20%">
     </div>
 
     <text-center>
@@ -35,7 +36,9 @@
         on the outdoors reaching the top of an mountain or going for a run. I also enjoy politics, psychology, boats and
         the occasional party.
     </text-center>
-
+    <br>
+    <br>
+    
     <hr>
     <h2>Programming</h2>
     <text-center>
@@ -53,7 +56,7 @@
 
     <h2>C++</h2>
     <text-center>
-        Mostly playing around with different projects. I know how to porgamm and work with it but lack serious project experience with it. I have set
+        Mostly playing around with different projects. I know how to progamm and work with it but lack serious project experience with it. I have set
         it as my next goal to just do something in C++ and therefore started tinkering around with making an Game Engine in it. It is very hard but
         I see continous progress and slowly I start geting the hang of it.
     </text-center>
@@ -63,7 +66,7 @@
     <h2>C#</h2>
     <text-center>
         Most of my C# experience is inside Unity, only some minor experiences building tools in C# with WinForm. The biggest challenges
-        I faced were about Maintainability / Readability of the gameplay code architecture.
+        I faced were always about Readability / Maintainability of the gameplay code architecture.
     </text-center>
     <br>
     <hr>
@@ -84,14 +87,14 @@
     <h2>Unity</h2>
     <text-center>
         In the last two years I learned the in and outs of game development with the Unity Engine. Now after two years of using the
-        engine I am confident to say that I am very comfortable with everything Unity related.
+        engine I am confident to say that I am very comfortable with everything Unity related and I am able to build any kind of game I want inside the engine.
     </text-center>
     <br>
     <hr>
 
     <h2>Game Design</h2>
     <text-center>
-        I fell in love with game design at university just because no one else would do it. Slowly I failed my way upward, project
+        I fell in love with game design at the SAE Institute just because no one else would do it for you. Slowly I failed my way upward, project
         per project until suddenly the games I made could be interpreted as fun. There is something very fascinating about
         having an initial idea and then iterating on it until someone has fun playing it. SAE Institute allowed me to
         do severall protoypes, game jams and even one physical card game game which all were a massive learning experience!
