--- a/gamejams.html
+++ b/gamejams.html
@@ -1,16 +1,17 @@
 <html>
 <header>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GameJams</title>
     <link rel="stylesheet" href="stylesheet.css">
 </header>
 
 <body>
     <ul class="navigation">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="gamejams.html" style="text-decoration: underline">Game Jams</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="index.html"><b>Home</b></a></li>
+        <li><a href="projects.html"><b>Projects</b></a></li>
+        <li><a href="gamejams.html"  style="text-decoration: underline"><b>Game Jams</b></a></li>
+        <li><a href="blog.html"><b>Blog</b></a></li>
+        <li><a href="aboutme.html"><b>About Me</b></a></li>
     </ul>
 
 
@@ -38,7 +39,7 @@
 
         <small-space-container></small-space-container>
         <row-container>
-            <download><a href="#">Download</a></download>
+            <download><a href="https://drive.google.com/open?id=19ufECt-sBwDRs2Qh3JLD9WIYRnnlwYjZ">Download</a></download>
         </row-container>
         <small-space-container></small-space-container>
 
@@ -52,7 +53,7 @@
         <row-container>
             <textMiddle>
                 A rythm infinite runner. Tap in sync with the beat while also switching gears at the right time. Keep the rythm and dodge
-                obstacles and you will survive till the end! If you miss enough beats or crash into enough obstacles your
+                obstacles and you will survive till the end! If you miss beats or crash into obstacles your
                 health will lower until eventually you run out of health and fail!
             </textMiddle>
             <textRight>
@@ -75,7 +76,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/DieInTheUI.gif" alt="AnimalSquad" style="width:150%">
+            <img src="images/DieInTheUI.gif" alt="AnimalSquad" style="width:150%; align-self: center;">
             <textMiddle>
                 Minigame challenges that have to be beaten without loosing all lives. Are you ready for madness? Trying to beat this game
                 will prove a challenge thats for sure. Simple tasks like pluggin in a USB Stick, typing a word or pressing
@@ -83,9 +84,9 @@
             </textMiddle>
             <textRight>
                 Made for Reversed Festivale GameJam 2017 in 72 hours. This was by far the most chaotic jam I have ever been part of. Our
-                team consisted of 8 people which was an absolut nightmare. Trying to steer the ship towards an unified creative
-                goal was impossible. Also keeping everyone busy with work proved to be quite a challenge. I learned a lot
-                about group dynamics and how the amount of content isnt realy critical for a jam.
+                team consisted of 8 people which was an absolute nightmare. Trying to steer the ship towards an unified creative
+                goal was impossible. Also keeping everyone busy with work took away a lot of my time. I learned a lot
+                about group dynamics and how the amount of content isn't realy critical for a jam.
             </textRight>
         </row-container>
 
@@ -101,7 +102,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:142%">
+            <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:142%; align-self: center;">
             <textMiddle>
                 Shoot your way out of trouble and minimize the mafia bosses galactic army as dual wielding police space ranger. Use your
                 booster and keep on collecting the spawning power ups to hold out for 5 minutes and survive the onslaught of
@@ -109,9 +110,9 @@
             </textMiddle>
             <textRight>
                 Made for BeansJam 2017 in 48 hours. The theme was Space Mafia. My first GameJam ever! Also the first time I worked in a group
-                on a game. After only 3 months experience of making games we decided to jump into the cold water and just
-                make something. Pretty happy with the results considering the circumstances. Also learned that the goal survive
-                for 5 minutes isnt that engaging for players.
+                on a game. After only 3 months of experience making games we decided to jump into the cold water and just
+                make something. Pretty happy with the results considering the circumstances. Also I learned that the goal survive
+                for 5 minutes isn't that engaging for players.
             </textRight>
         </row-container>
 
