--- a/projects.html
+++ b/projects.html
@@ -1,16 +1,17 @@
 <html>
 <header>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Projects</title>
     <link rel="stylesheet" href="stylesheet.css">
 </header>
 
 <body>
     <ul class="navigation">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="projects.html" style="text-decoration: underline">Projects</a></li>
-        <li><a href="gamejams.html">Game Jams</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="index.html"><b>Home</b></a></li>
+        <li><a href="projects.html" style="text-decoration: underline"><b>Projects</b></a></li>
+        <li><a href="gamejams.html"><b>Game Jams</b></a></li>
+        <li><a href="blog.html"><b>Blog</b></a></li>
+        <li><a href="aboutme.html"><b>About Me</b></a></li>
     </ul>
 
     <collumn-container>
@@ -20,7 +21,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/AnimalSquad.png" alt="AnimalSquad" style="width:300%; margin: 60px;">
+            <img src="images/AnimalSquad.png" alt="AnimalSquad" style="width:300%; margin: 60px; align-self: center;">
             <textMiddle>
                 Turn based strategy game in which you can fight a opponent to finally prove that you are the better tactician! Choose 5 animals
                 each with completly unqiue skills and try to combine their attacks to powerfull combos to gain the upperhand
@@ -29,16 +30,16 @@
             <textRight>
                 This project was made as end project at SAE Vienna in about 6 month. The team was 3 programmers and 3 artists strong. I was
                 the Project Leader and coordinated most of the meetings and development targets. I worked on every major
-                system at least once. The hardest challenge was the networking of the game and making sure that the client
-                and the server did not desync. I also wrote a little bit about <a href="#" style="display: inline-flex">
-                    failing our way towards an usable User Interface.</a>
+                system at least once. The hardest challenges were the networking of the game (making sure that client and server did not desync) and 
+                programming the Units in a way where they would be modular enough to allow for great variety in gameplay.I also wrote a little bit about
+                <a href="blog/FailingOurWayTowardsAnUI.html"> failing our way towards an User Interface.</a>
             </textRight>
         </row-container>
 
         <image-container>
-            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
-            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
-            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
+            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
         </image-container>
 
         <row-container>
@@ -53,30 +54,30 @@
         </row-container>
 
         <row-container>
-            <img src="images/UltimateParkourChallenge.gif" alt="UltimateParkourChallenge" style="width:200%; margin: 60px;">
+            <img src="images/UltimateParkourChallenge.gif" alt="UltimateParkourChallenge" style="width:300%; margin: 60px; align-self: center;">
 
             <textMiddle>
-                Run,Jump,Long Jump, High Jump, Slide, Dash, Swing, WallRun and WallDash your way to the goal. In this epic jump & run the
-                focus is on the expressive moveset. You will have to chain together different moves and all that while trying
+                Run,Jump,Long Jump, High Jump, Slide, Dash, Swing, Wall Run and Wall Dash your way to the goal. Take advantage
+                of the expressive moveset that allows multiple approaches to beat an obstacle in your way in order to beat this epic jump & run. You will have to chain together different moves all that while trying
                 to dodge different types of obstacles along the way.
             </textMiddle>
             <textRight>
                 From concept to finish me and a second programmer spend about 3 months working on this prototype. I mostly worked on the
                 character controller and spend a lot of my time to get the different moves feel right and transition to each
-                other smoothly. This project allowed me to solidify my linear algebra skills because each state in someway
-                needs to know a angle,direction or position. I wrote a little post mortem about this prototype <a
-                    href="#">which you can read here!</a>
+                other smoothly. This project allowed me to solidify my linear algebra skills because as I discovered while working on this building a character controller
+                involves lots of vector math. I wrote a little post mortem about this prototype <a
+                    href="blog/UltimateParkourChallenge_PostMortem.html">which you can read here!</a>
             </textRight>
         </row-container>
 
         <image-container>
-            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
-            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
-            <img src="images/AnimalSquad.png" style="width:100%; margin:20px;">
+            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
         </image-container>
 
         <row-container>
-            <download><a href="#">Download</a></download>
+            <download><a href="https://drive.google.com/open?id=1YJKFfv5xN0EfyG1QhDNtvsDTvhqEdyKX">Download</a></download>
         </row-container>
 
     </collumn-container>
