Switched from Gyfcat to mp4
-Modified index.html

--- a/gamejams.html
+++ b/gamejams.html
@@ -19,7 +19,13 @@
         <row-container>
             <h1>Scrap Race</h1>
         </row-container>
-        <div style='position:relative;padding-bottom:54%;'><iframe src='https://gfycat.com/ifr/CookedHarmoniousCockroach' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0' allowfullscreen></iframe></div>
+
+        <row-container>
+            <video width="500" height="350" autoplay controls loop>
+                <source src="video/ScrapRace.mp4" type="video/mp4">
+            </video>
+        </row-container>
+
         <row-container>
             <textMiddle>
                 Racing game where you are only able to break instead of accelerate. Drive down the junk yard track and try to dodge obstacles
@@ -48,7 +54,11 @@
             <h1>Beat Piston</h1>
         </row-container>
 
-        <div style='position:relative;padding-bottom:54%'><iframe src='https://gfycat.com/ifr/KlutzyAnyHadrosaurus' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0' allowfullscreen></iframe></div>
+        <row-container>
+            <video width="500" height="350" autoplay controls loop>
+                <source src="video/BeatPiston.mp4" type="video/mp4">
+            </video>
+        </row-container>
      
         <row-container>
             <textMiddle>
@@ -76,7 +86,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/DieInTheUI.gif" alt="AnimalSquad" style="width:150%; align-self: center;">
+            <img src="images/DieInTheUI.gif" alt="AnimalSquad" style="width:140%; align-self: center;">
             <textMiddle>
                 Minigame challenges that have to be beaten without loosing all lives. Are you ready for madness? Trying to beat this game
                 will prove a challenge thats for sure. Simple tasks like pluggin in a USB Stick, typing a word or pressing
@@ -102,7 +112,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:142%; align-self: center;">
+            <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:133%; align-self: center;">
             <textMiddle>
                 Shoot your way out of trouble and minimize the mafia bosses galactic army as dual wielding police space ranger. Use your
                 booster and keep on collecting the spawning power ups to hold out for 5 minutes and survive the onslaught of
