--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,11 @@
         </row-container>
 
         <row-container>
-            <img src="images/AnimalSquad.png" alt="AnimalSquad" style="width:300%; margin: 60px; align-self: center;">
+            
+            <video width="600" height="400" autoplay controls loop>
+                <source src="video/AnimalSquad.mp4" type="video/mp4">
+            </video>
+
             <textMiddle>
                 Turn based strategy game in which you can fight a opponent to finally prove that you are the better tactician! Choose 5 animals
                 each with completly unqiue skills and try to combine their attacks to powerfull combos to gain the upperhand
@@ -31,21 +35,23 @@
                 This project was made as end project at SAE Vienna in about 6 month. The team was 3 programmers and 3 artists strong. I was
                 the Project Leader and coordinated most of the meetings and development targets. I worked on every major
                 system at least once. The hardest challenges were the networking of the game (making sure that client and server did not desync) and 
-                programming the Units in a way where they would be modular enough to allow for great variety in gameplay.I also wrote a little bit about
-                <a href="blog/FailingOurWayTowardsAnUI.html"> failing our way towards an User Interface.</a>
+                programming the Units in a way where they would be modular enough to allow for great variety in gameplay.<!-- I also wrote a little bit about
+                <a href="blog/FailingOurWayTowardsAnUI.html"> failing our way towards an User Interface.</a>-->
             </textRight>
         </row-container>
 
         <image-container>
-            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
-            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
-            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/animalsquad_img1.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/animalsquad_img2.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/animalsquad_img3.png" style="width:70%; margin:20px; align-self: center;">
         </image-container>
 
+        <!--
         <row-container>
             <download><a href="#">Download</a></download>
         </row-container>
-
+        -->
+        
         <space-container>
         </space-container>
 
@@ -54,7 +60,10 @@
         </row-container>
 
         <row-container>
-            <img src="images/UltimateParkourChallenge.gif" alt="UltimateParkourChallenge" style="width:300%; margin: 60px; align-self: center;">
+
+            <video width="600" height="400" autoplay controls loop>
+                <source src="video/Jumper.mp4" type="video/mp4">
+            </video>
 
             <textMiddle>
                 Run,Jump,Long Jump, High Jump, Slide, Dash, Swing, Wall Run and Wall Dash your way to the goal. Take advantage
@@ -71,9 +80,9 @@
         </row-container>
 
         <image-container>
-            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
-            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
-            <img src="images/AnimalSquad.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/jumper_img1.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/jumper_img2.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/jumper_img3.png" style="width:70%; margin:20px; align-self: center;">
         </image-container>
 
         <row-container>
