Fixed responsiveness Issues for Videos/RowImages

--- a/gamejams.html
+++ b/gamejams.html
@@ -21,7 +21,7 @@
         </row-container>
 
         <row-container>
-            <video width="600" height="400" autoplay controls loop>
+            <video autoplay controls loop style="width: 100%;height: auto; max-width: 600; max-height: 400;">
                 <source src="video/ScrapRace.mp4" type="video/mp4">
             </video>
             <textMiddle>
@@ -52,7 +52,7 @@
         </row-container>
      
         <row-container>
-            <video width="600" height="400" autoplay controls loop>
+            <video autoplay controls loop style="width: 100%;height: auto; max-width: 600; max-height: 400;">
                 <source src="video/BeatPiston.mp4" type="video/mp4">
             </video>
             <textMiddle>
@@ -80,7 +80,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/DieInTheUI.gif" alt="AnimalSquad" style="width:140%; align-self: center;">
+            <img src="images/DieInTheUI.gif" alt="AnimalSquad" style="width:90%; align-self: center;">
             <textMiddle>
                 Minigame challenges that have to be beaten without loosing all lives. Are you ready for madness? Trying to beat this game
                 will prove a challenge thats for sure. Simple tasks like pluggin in a USB Stick, typing a word or pressing
@@ -106,7 +106,7 @@
         </row-container>
 
         <row-container>
-            <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:133%; align-self: center;">
+            <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:86%; align-self: center;">
             <textMiddle>
                 Shoot your way out of trouble and minimize the mafia bosses galactic army as dual wielding police space ranger. Use your
                 booster and keep on collecting the spawning power ups to hold out for 5 minutes and survive the onslaught of
