--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 
         <row-container>
             
-            <video width="600" height="400" autoplay controls loop>
+            <video autoplay controls loop style="width: 100%;height: auto; max-width: 600; max-height: 400;">
                 <source src="video/AnimalSquad.mp4" type="video/mp4">
             </video>
 
@@ -41,9 +41,9 @@
         </row-container>
 
         <image-container>
-            <img src="images/animalsquad_img1.png" style="width:70%; margin:20px; align-self: center;">
-            <img src="images/animalsquad_img2.png" style="width:70%; margin:20px; align-self: center;">
-            <img src="images/animalsquad_img3.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/animalsquad_img1.png">
+            <img src="images/animalsquad_img2.png">
+            <img src="images/animalsquad_img3.png">
         </image-container>
 
         <!--
@@ -61,7 +61,7 @@
 
         <row-container>
 
-            <video width="600" height="400" autoplay controls loop>
+            <video autoplay controls loop style="width: 100%;height: auto; max-width: 600; max-height: 400;">
                 <source src="video/Jumper.mp4" type="video/mp4">
             </video>
 
@@ -80,9 +80,9 @@
         </row-container>
 
         <image-container>
-            <img src="images/jumper_img1.png" style="width:70%; margin:20px; align-self: center;">
-            <img src="images/jumper_img2.png" style="width:70%; margin:20px; align-self: center;">
-            <img src="images/jumper_img3.png" style="width:70%; margin:20px; align-self: center;">
+            <img src="images/jumper_img1.png">
+            <img src="images/jumper_img2.png">
+            <img src="images/jumper_img3.png">
         </image-container>
 
         <row-container>
