Added KittenSmack / Removed words (simplified things)

--- a/gamejams.html
+++ b/gamejams.html
@@ -17,6 +17,33 @@
 
     <collumn-container>
         <row-container>
+            <h1>Kitten Smack</h1>
+        </row-container>
+
+        <row-container>
+            <video autoplay controls loop muted style="width: 100%;height: auto; max-width: 600; max-height: 400;">
+                <source src="video/KittenSmack.mp4" type="video/mp4">
+            </video>
+            <textMiddle>
+                Kitten Smack is a rhythmic sidescroller set in a surreal world. You have to save little a kitten by soundblasting it forward
+                or if you are evil, smacking it forward but be carefull there are dangerous creatures looming in the world that love to eat tasty
+                little Kittens.
+            </textMiddle>
+            <textRight>
+                Made for Geek GameJam 2018 in 48 hours. The task was to make a game that features the sound library of the PRES (Polish Experimental Radio Station).
+                I had the pleasure to team up with an artist, sound designer and a game designer. This was the first time I worked with an game designer and I could
+                focus only on the programming part. By far the best GameJam experience for me until now.
+            </textRight>
+        </row-container>
+
+        <small-space-container></small-space-container>
+        <row-container>
+            <download><a href="https://cyangmou.itch.io/kitten-smack">Download</a></download>
+        </row-container>
+        <small-space-container></small-space-container>
+
+
+        <row-container>
             <h1>Scrap Race</h1>
         </row-container>
 
