--- a/aboutme.html
+++ b/aboutme.html
@@ -25,16 +25,14 @@
     <text-center style="display: flex; flex-wrap: nowrap;">
         Hello there, my name is Rene Kienauer and I love making games. Since I can remember I have always been playing and talking
         about games. Even though I wanted to be a game progammer since I was 10 I did not really pursue this dream until
-        much later in life. Now I have found my calling and cant stop thinking about programming and designing them!
+        much later in life. Now I have found my calling and can't stop thinking about programming and designing them!
     </text-center>
     <br>
     <br>
     <text-center style="display: flex; flex-wrap: nowrap;">
         When I am not dreaming up solutions for problems (programming) or dreaming up problems to solve (game design) then I am mostly
-        watching all kinds of media I can get my hands on like good movies, lots of Youtube and different Twitch streams.
-        I also do a lot of reading on Reddit and Twitter, probably much more than I should. Sometimes even you can find me
-        on the outdoors reaching the top of an mountain or going for a run. I also enjoy politics, psychology, boats and
-        the occasional party.
+        consuming all kinds of media I can get my hands on like movies, games, books, livestreams and videos. Sometimes even you can find me
+        on the outdoors reaching the top of an mountain or going for a run. I also enjoy politics, psychology, boats and the occasional party.
     </text-center>
     <br>
     <br>
@@ -42,31 +40,14 @@
     <hr>
     <h2>Programming</h2>
     <text-center style="display: flex; flex-wrap: nowrap;">
-        I have been programming now seriously for about three years before that I made some first experiences in the higher technical
-        college I visited. I love the feeling of figuring out solutions to problems and then see them work in reality. Even
-        though there is still much to learn for me I have the strong feeling that given enough time, no matter how hard the
-        problem may seem at first, I can arrive at an working solution!
+        I love the feeling of figuring out solutions to problems and then see them work in reality. I mainly work with C# inside Unity and
+        in my spare time I like to tinker around with C++ and trying to learn Game Engine Development from the ground up. I value the readability 
+        and simplicity as the top criteria when writing code but I am also deeply interested in how to write the fastests possible solution (see my 
+        Data Oriented Article on the Blog).
     </text-center>
     <h3><b> Topics </b></h3>
     <text-center style="justify-content: left; display: flex; flex-wrap: nowrap;">
-        Object Oriented, Data Oriented, Networking, Design Patterns, Game Engine Architecture, Basic OpenGL/DirectX, Git, SVN
-    </text-center>
-    <br>
-    <hr>
-
-    <h2>C++</h2>
-    <text-center style="display: flex; flex-wrap: nowrap;">
-        Mostly playing around with different projects. I know how to progamm and work with it but lack serious project experience with it. I have set
-        it as my next goal to just do something in C++ and therefore started tinkering around with making an Game Engine in it. It is very hard but
-        I see continous progress and slowly I start geting the hang of it.
-    </text-center>
-    <br>
-    <hr>
-
-    <h2>C#</h2>
-    <text-center style="display: flex; flex-wrap: nowrap;">
-        Most of my C# experience is inside Unity, only some minor experiences building tools in C# with WinForm. The biggest challenges
-        I faced were always about Readability / Maintainability of the gameplay code architecture.
+        Object Oriented, Data Oriented, Gameplay, Networking, Design Patterns, Game Engine Architecture, Basic Graphics Programming (OpenGL), Git, SVN
     </text-center>
     <br>
     <hr>
@@ -74,8 +55,7 @@
     <h2>Mathematics</h2>
     <text-center style="display: flex; flex-wrap: nowrap;">
         Since my electrical engineering days I have been a fan of solving math problems. I dont think I am very good at it but nevertheless
-        I will keep on trying. Today I mostly deal with practical math problems in form of gameplay equations, easing equations
-        and lots of vector math.
+        I will keep on trying.
     </text-center>
     <h3><b> Topics </b></h3>
     <text-center style="justify-content: left; display: flex; flex-wrap: nowrap;">
@@ -86,8 +66,8 @@
 
     <h2>Unity</h2>
     <text-center style="display: flex; flex-wrap: nowrap;">
-        In the last two years I learned the in and outs of game development with the Unity Engine. Now after two years of using the
-        engine I am confident to say that I am very comfortable with everything Unity related and I am able to build any kind of game I want inside the engine.
+        In the last two years I learned the in and outs of game development with the Unity Engine. After two years of using the
+        engine daily I am confident to say that I am very comfortable with everything Unity related and I am able to build any kind of game I want inside the engine.
     </text-center>
     <br>
     <hr>
@@ -95,9 +75,8 @@
     <h2>Game Design</h2>
     <text-center style="display: flex; flex-wrap: nowrap;">
         I fell in love with game design at the SAE Institute just because no one else would do it for you. Slowly I failed my way upward, project
-        per project until suddenly the games I made could be interpreted as fun. There is something very fascinating about
-        having an initial idea and then iterating on it until someone has fun playing it. SAE Institute allowed me to
-        do severall protoypes, game jams and even one physical card game game which all were a massive learning experience!
+        per project. There is something very fascinating about having an initial idea and then iterating on it until someone has fun playing it.
+        SAE Institute allowed me to do severall protoypes, game jams and even one physical card game game which all were a massive learning experience!
     </text-center>
     <br>
     <hr>
