Added Github Link

--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
         <li><a href="projects.html"><b>Projects</b></a></li>
         <li><a href="gamejams.html"><b>Game Jams</b></a></li>
         <li><a href="blog.html" style="text-decoration: underline"><b>Blog</b></a></li>
+        <li><a href="https://github.com/KienRe"><b>GitHub</b></a></li>
         <li><a href="aboutme.html"><b>About Me</b></a></li>
     </ul>
 
