--- a/gamejams.html
+++ b/gamejams.html
@@ -9,8 +9,9 @@
     <ul class="navigation">
         <li><a href="index.html"><b>Home</b></a></li>
         <li><a href="projects.html"><b>Projects</b></a></li>
-        <li><a href="gamejams.html"  style="text-decoration: underline"><b>Game Jams</b></a></li>
+        <li><a href="gamejams.html" style="text-decoration: underline"><b>Game Jams</b></a></li>
         <li><a href="blog.html"><b>Blog</b></a></li>
+        <li><a href="https://github.com/KienRe"><b>GitHub</b></a></li>
         <li><a href="aboutme.html"><b>About Me</b></a></li>
     </ul>
 
