More text fixes and rewrites

--- a/aboutme.html
+++ b/aboutme.html
@@ -42,13 +42,13 @@
     <h2>Programming</h2>
     <text-center style="display: flex; flex-wrap: nowrap;">
         I love the feeling of figuring out solutions to problems and then see them work in reality. I mainly work with C# inside Unity and
-        in my spare time I like to tinker around with C++ and trying to learn Game Engine Development from the ground up. I value the readability 
-        and simplicity as the top criteria when writing code but I am also deeply interested in how to write the fastests possible solution (see my 
-        Data Oriented Article on the Blog).
+        in my spare time I like to tinker around with C++ trying to learn Game Engine Development from the ground up. I value the readability 
+        and simplicity as the top criteria when writing code but I am also deeply interested in performance, trying to write the fastests possible solution
+		(see my Data Oriented Article on the Blog).
     </text-center>
     <h3><b> Topics </b></h3>
     <text-center style="justify-content: left; display: flex; flex-wrap: nowrap;">
-        Object Oriented, Data Oriented, Gameplay, Networking, Design Patterns, Game Engine Architecture, Basic Graphics Programming (OpenGL), Git, SVN
+        Object Oriented, Data Oriented, Gameplay, Design Patterns, Game Engine Architecture, Basic Graphics Programming (OpenGL), Git, SVN
     </text-center>
     <br>
     <hr>
@@ -67,7 +67,7 @@
 
     <h2>Unity</h2>
     <text-center style="display: flex; flex-wrap: nowrap;">
-        In the last two years I learned the in and outs of game development with the Unity Engine. After two years of using the
+        In the last two years I learned the ins and outs of game development with the Unity Engine. After two years of using the
         engine daily I am confident to say that I am very comfortable with everything Unity related and I am able to build any kind of game I want inside the engine.
     </text-center>
     <br>
