--- a/gamejams.html
+++ b/gamejams.html
@@ -22,7 +22,7 @@
         </row-container>
 
         <row-container>
-            <video autoplay controls loop muted style="width: 100%;height: auto; max-width: 600; max-height: 400;">
+            <video autoplay controls loop muted style="width: 100%;height: 100%; max-width: 600; max-height: 400;">
                 <source src="video/KittenSmack.mp4" type="video/mp4">
             </video>
             <textMiddle>
@@ -31,7 +31,7 @@
                 little Kittens.
             </textMiddle>
             <textRight>
-                Made for Geek GameJam 2018 in 48 hours. The task was to make a game that features the sound library of the PRES (Polish Experimental Radio Station).
+                Made for Geek GameJam 2018 in 48 hours. The task was to make a game that features the sound library of the PRES (Polish Experimental Radio Station). 
                 I had the pleasure to team up with an artist, sound designer and a game designer. This was the first time I worked with an game designer and I could
                 focus only on the programming part. By far the best GameJam experience for me until now.
             </textRight>
@@ -49,7 +49,7 @@
         </row-container>
 
         <row-container>
-            <video autoplay controls loop style="width: 100%;height: auto; max-width: 600; max-height: 400;">
+            <video autoplay controls loop style="width: 100%;height: 81%; max-width: 600; max-height: 400;">
                 <source src="video/ScrapRace.mp4" type="video/mp4">
             </video>
             <textMiddle>
@@ -80,13 +80,13 @@
         </row-container>
      
         <row-container>
-            <video autoplay controls loop style="width: 100%;height: auto; max-width: 600; max-height: 400;">
+            <video autoplay controls loop style="width: 100%;height: 100%; max-width: 600; max-height: 400;">
                 <source src="video/BeatPiston.mp4" type="video/mp4">
             </video>
             <textMiddle>
                 A rythm infinite runner. Tap in sync with the beat while also switching gears at the right time. Keep the rythm and dodge
                 obstacles and you will survive till the end! If you miss beats or crash into obstacles your
-                health will lower until eventually you run out of health and fail!
+                health will lower until you run out of health and fail!
             </textMiddle>
             <textRight>
                 Made for Global GameJam 2017 in 48 hours. Our team consisted of 2 programmers, 1 sound designer and 2 artists. The game is
@@ -111,7 +111,7 @@
             <img src="images/DieInTheUI.gif" alt="AnimalSquad" style="width:90%; align-self: center;">
             <textMiddle>
                 Minigame challenges that have to be beaten without loosing all lives. Are you ready for madness? Trying to beat this game
-                will prove a challenge thats for sure. Simple tasks like pluggin in a USB Stick, typing a word or pressing
+                will prove a challenge thats for sure. Simple tasks like plugging in a USB Stick, typing a word or pressing
                 a button where never that hard.
             </textMiddle>
             <textRight>
@@ -136,7 +136,7 @@
         <row-container>
             <img src="images/TheBeatDown.gif" alt="AnimalSquad" style="width:86%; align-self: center;">
             <textMiddle>
-                Shoot your way out of trouble and minimize the mafia bosses galactic army as dual wielding police space ranger. Use your
+                Shoot your way out of trouble and minimize the mafia bosse's galactic army as dual wielding police space ranger. Use your
                 booster and keep on collecting the spawning power ups to hold out for 5 minutes and survive the onslaught of
                 mafia henchman.
             </textMiddle>
