--- a/projects.html
+++ b/projects.html
@@ -23,21 +23,20 @@
 
         <row-container>
             
-            <video autoplay controls loop style="width: 100%;height: auto; max-width: 600; max-height: 400;">
+            <video autoplay controls loop style="width: 100%;height: 100%; max-width: 600; max-height: 400;">
                 <source src="video/AnimalSquad.mp4" type="video/mp4">
             </video>
 
             <textMiddle>
-                Turn based strategy game in which you can fight a opponent to finally prove that you are the better tactician! Choose 5 animals
-                each with completly unqiue skills and try to combine their attacks to powerfull combos to gain the upperhand
-                in battle. Win your fights by managing positioning, objectives and healthpoints.
+                Multiplayer turn based strategy that allows you to prove your tactical finesse! Use your five animals
+                each with unqiue abilities and try to combine their attacks into powerfull combos to gain the upperhand
+                in battle. Win your fights by carefully managing positioning, objectives and healthpoints.
             </textMiddle>
             <textRight>
-                This project was made as end project at SAE Vienna in about 6 month. The team was 3 programmers and 3 artists strong. I was
-                the Project Leader and coordinated most of the meetings and development targets. I worked on every major
-                system at least once. The hardest challenges were the networking of the game (making sure that client and server did not desync) and 
-                programming the Units in a way where they would be modular enough to allow for great variety in gameplay.<!-- I also wrote a little bit about
-                <a href="blog/FailingOurWayTowardsAnUI.html"> failing our way towards an User Interface.</a>-->
+                Animal Squad was made as part of my end project at SAE Vienna in about 6 month. The team was 3 programmers and 3 artists strong. I was
+                the Project Leader and coordinated meetings and development targets. I worked on every system at least once but primarly focused on
+				Networking (via GameSparks Services), Hexagon Grid System and Player Gameplay code. The hardest challenges were the networking of the game
+				(making sure that client and server did not desync) and programming the units in a modular way to allow for great variety in gameplay.
             </textRight>
         </row-container>
 
@@ -47,11 +46,9 @@
             <img src="images/animalsquad_img3.png">
         </image-container>
 
-        <!--
         <row-container>
-            <download><a href="#">Download</a></download>
+            <download><a href="https://drive.google.com/file/d/14wX0qwAg1CupHjINl7mkxJzh7OoJLYLb/view?usp=sharing">Download</a></download>
         </row-container>
-        -->
         
         <space-container>
         </space-container>
@@ -62,20 +59,20 @@
 
         <row-container>
 
-            <video autoplay controls loop style="width: 100%;height: auto; max-width: 600; max-height: 400;">
+            <video autoplay controls loop style="width: 100%;height: 100%; max-width: 600; max-height: 400;">
                 <source src="video/Jumper.mp4" type="video/mp4">
             </video>
 
             <textMiddle>
-                Run,Jump,Long Jump, High Jump, Slide, Dash, Swing, Wall Run and Wall Dash your way to the goal. Take advantage
-                of the expressive moveset that allows multiple approaches to beat an obstacle in your way in order to beat this epic jump & run. You will have to chain together different moves all that while trying
+                Run, Jump, Long Jump, High Jump, Slide, Dash, Swing, Wall Run and Wall Dash your way to the goal. Take advantage
+                of an expressive moveset that allows for multiple approaches. You will have to chain together different moves all while trying
                 to dodge different types of obstacles along the way.
             </textMiddle>
             <textRight>
                 From concept to finish me and a second programmer spend about 3 months working on this prototype. I mostly worked on the
-                character controller and spend a lot of my time to get the different moves feel right and transition to each
-                other smoothly. This project allowed me to solidify my linear algebra skills because as I discovered while working on this building a character controller
-                involves lots of vector math. I wrote a little post mortem about this prototype <a
+                character controller and spend a lot of my time trying to get the different moves to feel right. This project allowed me to
+				solidify my linear algebra skills because as I discovered while working on this building a character controller
+                involves lots of vector math. I wrote a little post mortem about this prototype	 <a
                     href="blog/UltimateParkourChallenge_PostMortem.html">which you can read here!</a>
             </textRight>
         </row-container>
