Changed projects/gamejam texts for the millionth time

--- a/gamejams.html
+++ b/gamejams.html
@@ -27,8 +27,8 @@
             </video>
             <textMiddle>
                 Kitten Smack is a rhythmic sidescroller set in a surreal world. You have to save little a kitten by soundblasting it forward
-                or if you are evil, smacking it forward but be carefull there are dangerous creatures looming in the world that love to eat tasty
-                little Kittens.
+                or if you are evil, smacking it forward but be carefull there are dangerous creatures looming around the corner that love to eat tasty
+                little kittens.
             </textMiddle>
             <textRight>
                 Made for Geek GameJam 2018 in 48 hours. The task was to make a game that features the sound library of the PRES (Polish Experimental Radio Station). 
@@ -89,7 +89,7 @@
                 health will lower until you run out of health and fail!
             </textMiddle>
             <textRight>
-                Made for Global GameJam 2017 in 48 hours. Our team consisted of 2 programmers, 1 sound designer and 2 artists. The game is
+                Made for Global GameJam 2017 in 48 hours. Our team consisted of 2 programmers, a sound designer and 2 artists. The game is
                 based loosely on the jams theme Transmission. We tried to convey the feeling of what switching gears could
                 feel like inside an engine. I worked on everything except syncinc the beat with gameplay which proved to
                 be very hard to get right within the constraints of the jam.
