--- a/projects.html
+++ b/projects.html
@@ -28,15 +28,15 @@
             </video>
 
             <textMiddle>
-                Multiplayer turn based strategy that allows you to prove your tactical finesse! Use your five animals
-                each with unqiue abilities and try to combine their attacks into powerfull combos to gain the upperhand
-                in battle. Win your fights by carefully managing positioning, objectives and healthpoints.
+                Turn based 1v1 multiplayer strategy action that will test your tactical finesse! Use your five animals
+                and try to combine their unqiue abilities into powerfull combos to gain the upperhand
+                on the battlefield. Win your fights by carefully managing positioning, objectives and healthpoints.
             </textMiddle>
             <textRight>
                 Animal Squad was made as part of my end project at SAE Vienna in about 6 month. The team was 3 programmers and 3 artists strong. I was
                 the Project Leader and coordinated meetings and development targets. I worked on every system at least once but primarly focused on
 				Networking (via GameSparks Services), Hexagon Grid System and Player Gameplay code. The hardest challenges were the networking of the game
-				(making sure that client and server did not desync) and programming the units in a modular way to allow for great variety in gameplay.
+				(ensuring server and client where in sync) and programming the units in a modular way to allow for great variety in gameplay.
             </textRight>
         </row-container>
 
@@ -66,7 +66,7 @@
             <textMiddle>
                 Run, Jump, Long Jump, High Jump, Slide, Dash, Swing, Wall Run and Wall Dash your way to the goal. Take advantage
                 of an expressive moveset that allows for multiple approaches. You will have to chain together different moves all while trying
-                to dodge different types of obstacles along the way.
+                to dodge all types of obstacles along the way.
             </textMiddle>
             <textRight>
                 From concept to finish me and a second programmer spend about 3 months working on this prototype. I mostly worked on the
